--- a/web/src/app/components/quizzes/quizzes.component.html
+++ b/web/src/app/components/quizzes/quizzes.component.html
@@ -1,1 +1,3 @@
-<p>quizzes works!</p>
+<div class="list-group" *ngFor="let quiz of page.content">
+  <a href="#" class="list-group-item list-group-item-action">{{ quiz.title }}</a>
+</div>
