--- a/web/src/app/components/quizzes/quizzes.component.html
+++ b/web/src/app/components/quizzes/quizzes.component.html
@@ -1,3 +1,8 @@
-<div class="list-group" *ngFor="let quiz of page.content">
-  <a href="#" class="list-group-item list-group-item-action">{{ quiz.title }}</a>
+<div class="list-group list-group-flush" *ngFor="let quiz of page.content">
+  <div class="row" style="width: 50%; margin-left: auto; margin-right: auto">
+    <a href="#" class="list-group-item list-group-item-action col-sm-10">{{ quiz.title }}</a>
+    <button type="button" class="close col-sm-2" aria-label="Close" (click)="remove(quiz.id)">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 </div>
