Implemented changing quiz's title in frontend app

--- a/web/src/app/components/questions/questions.component.html
+++ b/web/src/app/components/questions/questions.component.html
@@ -1,3 +1,8 @@
+<form (ngSubmit)="updateQuizName(quizId, quizTitleInput.value)">
+  <input #quizTitleInput [value]="quizTitle">
+  <button type="submit">Zmień nazwę</button>
+</form>
+
 <mat-selection-list  [multiple]="false">
   <mat-list-option *ngFor="let content of questionPage.content">
     {{ content.content }}
