Created dialog to confirming change quiz's title

--- a/web/src/app/components/questions/questions.component.html
+++ b/web/src/app/components/questions/questions.component.html
@@ -1,7 +1,5 @@
-<form (ngSubmit)="updateQuizName(quizId, quizTitleInput.value)">
-  <input #quizTitleInput [value]="quizTitle">
-  <button type="submit">Zmień nazwę</button>
-</form>
+<span> {{ quizTitle }}</span>
+<button mat-raised-button (click)="openDialog()">Zmień nazwę</button>
 
 <mat-selection-list  [multiple]="false">
   <mat-list-option *ngFor="let content of questionPage.content">
