--- a/web/src/app/components/questions/questions.component.html
+++ b/web/src/app/components/questions/questions.component.html
@@ -1,18 +1,29 @@
-<span> {{ quizTitle }}</span>
-<button mat-raised-button (click)="openDialog()">Zmień nazwę</button>
-
-<mat-selection-list  [multiple]="false">
-  <mat-list-option *ngFor="let content of questionPage.content">
-    {{ content.content }}
-  </mat-list-option>
-</mat-selection-list>
-
-<form (ngSubmit)="addQuestion(content.value)">
-  <div style="display: inline-block;">
-    <label for="questionsContent">Treść pytania</label>
-    <input #content type="text" id="questionsContent" name="questionsContent">
-    <button type="submit">Dodaj</button>
+<div class="container">
+  <div style="display: flex; justify-content: space-between;">
+    <div class="title">
+      {{ quizTitle }}
+    </div>
+    <div>
+      <button mat-raised-button (click)="openDialog()">Zmień nazwę</button>
+    </div>
   </div>
-</form>
 
+  <mat-selection-list  [multiple]="false">
+    <mat-list-option *ngFor="let content of questionPage.content">
+      {{ content.content }}
+    </mat-list-option>
+  </mat-selection-list>
+
+  <form (ngSubmit)="addQuestion(content.value)">
+    <div style="display: flex; justify-content: space-between;">
+      <div>
+        <label for="questionsContent" style="margin-right: 20px;">Treść pytania</label>
+        <input #content type="text" id="questionsContent" name="questionsContent">
+      </div>
+      <div>
+        <button mat-raised-button type="submit">Dodaj</button>
+      </div>
+    </div>
+  </form>
+</div>
 
