--- a/web/src/app/components/quizzes/quizzes.component.html
+++ b/web/src/app/components/quizzes/quizzes.component.html
@@ -1,8 +1,10 @@
-<div class="list-group list-group-flush" *ngFor="let quiz of page.content">
-  <div class="row" style="width: 50%; margin-left: auto; margin-right: auto">
-    <a [title]="quiz.title" [routerLink]="['/admin/quizzes', quiz.id]" (click)="updateQuizParamsService(quiz.id, quiz.title)" class="list-group-item list-group-item-action col-sm-10">{{ quiz.title }}</a>
-    <button type="button" class="close col-sm-2" aria-label="Close" (click)="remove(quiz.id)">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
+<div class="container">
+  <ul class="list-group" *ngFor="let quiz of page.content">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      <a [title]="quiz.title" [routerLink]="['/admin/quizzes', quiz.id]" (click)="updateQuizParamsService(quiz.id, quiz.title)">{{ quiz.title }}</a>
+      <button type="button" class="close col-sm-2" aria-label="Close" (click)="remove(quiz.id)">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </li>
+  </ul>
 </div>
