--- a/web/src/app/components/quizzes/quizzes.component.css
+++ b/web/src/app/components/quizzes/quizzes.component.css
@@ -1,3 +1,17 @@
 body {
   background: #51A351;
 }
+
+.container {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto
+}
+
+a {
+  width: 50%;
+}
+
+.container {
+  margin-top: 40px;
+}
